@@ -1,9 +1,10 @@
 #include "alloc.h"
 #include "array.h"
-#include "bin.h"
 
-int array_cat(struct array *a, void* i)
+int array_cat(struct array *a, void* dat)
 {
+  register char *dp;
+  register char *sp;
   unsigned long old_u;
   unsigned long old_a;
   unsigned long new_a;
@@ -21,7 +22,16 @@ int array_cat(struct array *a, void* i)
     a->a = new_a;
   }
 
-  bin_copy((char *)i, a->x + (old_u * es), es);
+  dp = a->x + (old_u * es);
+  sp = dat;
+
+  for (;;) {
+    if (!es) break; *dp++ = *sp++; --es;
+    if (!es) break; *dp++ = *sp++; --es;
+    if (!es) break; *dp++ = *sp++; --es;
+    if (!es) break; *dp++ = *sp++; --es;
+  } 
+
   a->u++;
   return 1;
 }
