@@ -1,6 +1,4 @@
-#include "alloc.h"
 #include "array.h"
-#include "bin.h"
 
 void array_chop(struct array *a, unsigned long sz)
 {
