@@ -1,9 +1,10 @@
-#include "alloc.h"
 #include "array.h"
-#include "bin.h"
 
 int array_copy(struct array *b, const struct array *a)
 {
+  register char *dp;
+  register char *sp;
+  unsigned long nb;
   unsigned long u;
   unsigned int es;
 
@@ -13,9 +14,18 @@ int array_copy(struct array *b, const struct array *a)
   if (b->x) array_free(b);
   if (!array_init(b, u, es)) return 0;
   
-  bin_copy(a->x, b->x, u * es);
+  dp = b->x;
+  sp = a->x;
+  nb = u * es;
+
+  for (;;) {
+    if (!nb) break; *dp++ = *sp++; --nb;
+    if (!nb) break; *dp++ = *sp++; --nb;
+    if (!nb) break; *dp++ = *sp++; --nb;
+    if (!nb) break; *dp++ = *sp++; --nb;
+  }
+  
   b->u = u;
   b->es = es;
-
   return 1;
 }
