@@ -6,5 +6,4 @@ sstring_copy.o
 sstring_cpyb.o
 sstring_cpys.o
 sstring_init.o
-sstring_trunc.o
 sstring_chop.o
