@@ -9,6 +9,5 @@ unsigned long sstring_chop(struct sstring *s, unsigned long len)
   str = s->s;
   str[len] = 0;
   s->len = len;
-
   return len;
 }
